--- a/labs/L3LS_EVPN/sites/site_2/config_backup/s2-leaf4_post_running-config.conf
+++ b/labs/L3LS_EVPN/sites/site_2/config_backup/s2-leaf4_post_running-config.conf
@@ -62,6 +62,12 @@ interface Port-Channel1
    switchport mode trunk
    switchport trunk group MLAG
 !
+interface Port-Channel4
+   description SERVER_s2-host2
+   switchport access vlan 20
+   mlag 4
+   spanning-tree portfast
+!
 interface Ethernet1
    description MLAG_s2-leaf3_Ethernet1
    channel-group 1 mode active
@@ -79,6 +85,8 @@ interface Ethernet3
    ip address 172.16.2.15/31
 !
 interface Ethernet4
+   description SERVER_s2-host2_eth2
+   channel-group 4 mode active
 !
 interface Ethernet6
    description MLAG_s2-leaf3_Ethernet6
